<resources>
    <string name="app_name">Kiosk Quiz</string>
    <string name="international_women_s_day_2018">International Women’s Day 2018</string>
    <string name="gettingtoequal">#GettingToEqual</string>
    <string name="participate_in_a_simple_5_step_quiz_and_stand_a_chance_to_win_vouchers">Participate in a simple 5 step quiz and stand a chance to win vouchers!*</string>
    <string name="fill_in_on_the_gettingtoequal_app">Fill in your email ID</string>
    <string name="there_will_be_a_total_of_5_questions">Answer 5 questions in 3 minutes</string>
    <string name="answer_all_the_questions_correctly_to_win_the_voucher">Keep your fingers crossed.</string>
    <string name="give_consent_for_the_clicking_of_my_picture_for_the_purposes_mentioned_hereinabove_by_accenture"><![CDATA[Give consent for the clicking of my picture for the purposes mentioned.]]></string>
    <string name="declare_that_the_aforementioned_consent_has_been_provided_by_me_freely_without_any_kind_of_pressure_or_coercion">Declare that the aforementioned consent has been provided by me freely without any kind of pressure or coercion</string>
    <string name="fully_understand_that_the_said_information_will_be_used_in_accordance_with_accenture_s_data_privacy_policy_90_and_accenture_india_supplement_to_data_privacy_policy_90_and_solely_for_the_purpose_set_out_above">Fully understand that the said information will be used in accordance with Accenture’s Data Privacy Policy 90 and Accenture India Supplement to Data Privacy Policy 90 and solely for the purpose set out above.</string>
    <string name="understand_that_accenture_shall_use_reasonable_measures_taking_account_of_evolving_technology_and_risks_to_keep_the_information_so_collected_secure_and_shall_hold_the_information_only_for_as_long_as_necessary_to_achieve_the_purpose_mentioned_in_the_agreement"><![CDATA[Understand that Accenture, shall use reasonable measures, taking account of evolving technology and risks, to keep the information so collected secure, and shall hold the information only for as long as necessary to achieve the purpose mentioned in the Agreement.]]></string>
    <string name="understand_that_such_data_once_collected_can_only_be_used_for_the_stated_purpose_s_set_out_here_in_below"><![CDATA[Understand that such data once collected can only be used for the stated purpose set out here in below.]]></string>
    <string name="understand_that_this_is_appropriate_and_necessary_data_being_collected_by_velocity_for_usage_by_accenture_this_will_not_be_shared_for_any_purposes_with_any_third_party">Understand that this is appropriate and necessary data being collected by VELOCITY for usage by Accenture. This will not be shared for any purposes with any third party.</string>
    <string name="by_sharing_my_details_i_agree_in_my_own_right_to_the_processing_of_the_information_by_accenture_for_purposes_i_understand_that_such_processing_will_be_carried_out_in_accordance_with_local_data_privacy_laws_and_accenture_s_policy_90_which_together_regulate_the_way_in_which_accenture_collects_and_uses_personal_data_and_my_rights_to_access_and_correct_my_data"><![CDATA[By sharing my details I agree in my own right to the processing of the information by Accenture for purposes.  I understand that such processing will be carried out in accordance with local data privacy laws and Accenture’s Policy 90, which together regulate the way in which Accenture collects and uses personal data and my rights to access and correct my data.]]></string>
    <string name="submit_continue"><![CDATA[Agree & Continue]]></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="start">START</string>
    <string name="error">Check your name/email</string>
    <string name="longer_positive">Okay</string>
    <string name="submit_my_entery">Submit my entry</string>
    <string name="logo">logo</string>
    <string name="note">*Lucky draw winners. To be announced on March 28</string>
    <string name="success"> Ready to play</string>
    <string name="disclamer_questios">By completing all 5 questions and giving your Email ID, you stand a chance to qualify for a gift voucher*
Winners will be chosen by lucky draw by March 28</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_ve_reached_the_end_of_the_quiz_hope_that_was_easy">You’ve reached the end of the Quiz. Hope that was easy!</string>
    <string name="thank_you_for_promoting_a_culture_of_equality">Thank you for promoting a Culture of Equality!</string>
    <string name="you_will_receive_a_mail_from_cultureofequality_iwd_com_do_read_it_for_more_details_on_the_contest_and_how_you_can_participate_in_the_international_women_s_day_celebrations_2018">You will receive a mail from CultureOfEquality@IWD.com Do read it for more details on the contest and how you can participate in the International Women’s Day Celebrations 2018.</string>
    <string name="home">HOME</string>
    <string name="network">Network Error</string>
    <string name="consent_form">CONSENT FORM</string>

</resources>
