<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThankYouActivity">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:id="@+id/logo"
            android:src="@drawable/culture_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/logo">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:fontFamily="@font/arial"
        android:id="@+id/congrats"
        android:gravity="center"
        android:textColor="@color/darkOrange"
        android:layout_centerInParent="true"
        android:text="@string/congratulations"/>

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="30sp"
            android:layout_gravity="center"
            android:paddingStart="15sp"
            android:gravity="center"
            android:paddingEnd="15sp"
            android:layout_height="wrap_content"
            android:textColor="@color/darkOrange"
            android:fontFamily="@font/arial"
            android:textSize="30sp"
            android:text="@string/you_ve_reached_the_end_of_the_quiz_hope_that_was_easy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30sp"
            android:layout_gravity="center"
            android:paddingStart="15sp"
            android:gravity="center"
            android:paddingEnd="15sp"
            android:textColor="@color/darkOrange"
            android:fontFamily="@font/arial"
            android:textSize="30sp"
            android:text="@string/thank_you_for_promoting_a_culture_of_equality"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60sp"
            android:layout_gravity="center"
            android:paddingStart="15sp"
            android:gravity="center"
            android:paddingEnd="15sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/arial"
            android:textSize="30sp"
            android:text="@string/you_will_receive_a_mail_from_cultureofequality_iwd_com_do_read_it_for_more_details_on_the_contest_and_how_you_can_participate_in_the_international_women_s_day_celebrations_2018"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50sp"
            android:paddingStart="60sp"
            android:id="@+id/home_button"
            android:paddingEnd="60sp"
            android:layout_gravity="center"
            android:layout_marginStart="50sp"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:text="@string/home"
            android:layout_marginTop="24sp"/>
    </LinearLayout>
</RelativeLayout>