<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/logo"
      android:layout_centerHorizontal="true"
      android:orientation="vertical">
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="220dp"
      android:id="@+id/logo1"
      android:src="@drawable/logo"

      android:contentDescription="@string/logo" />
  </LinearLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:id="@+id/paticipate_layout"
      android:layout_below="@+id/logo"

      android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:textColor="#A64B24"
        android:textSize="35sp"
        android:id="@+id/prize"
        android:fontFamily="@font/arial"
        android:padding="10sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/participate_in_a_simple_5_step_quiz_and_stand_a_chance_to_win_vouchers"/>

    <TextView
        android:layout_width="match_parent"
        android:textColor="#A64B24"
        android:textSize="35sp"
        android:paddingStart="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/arial"
        android:paddingTop="20sp"
        android:layout_below="@+id/prize"
        android:layout_marginTop="10sp"
        android:layout_height="wrap_content"
        android:text="HOW TO PLAY"/>
  </RelativeLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:id="@+id/rules_layout"
      android:paddingStart="20sp"
      android:layout_below="@+id/paticipate_layout"
      android:paddingTop="30sp"
      android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rule_1"
        android:orientation="horizontal">
      <ImageView
          android:layout_width="35sp"
          android:layout_height="35sp"
          android:paddingTop="10sp"
          android:src="@drawable/circle"/>
      <TextView
          android:layout_width="wrap_content"
          android:textColor="#963FBF"
          android:paddingStart="30sp"
          android:fontFamily="@font/arial"
          android:textSize="30sp"
          android:layout_height="wrap_content"
          android:text="@string/fill_in_on_the_gettingtoequal_app"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:id="@+id/rule_2"
        android:layout_below="@id/rule_1"
        android:orientation="horizontal">
      <ImageView
          android:layout_width="35sp"
          android:layout_height="35sp"
          android:paddingTop="10sp"
          android:src="@drawable/circle"/>
      <TextView
          android:layout_width="wrap_content"
          android:textColor="#963FBF"
          android:paddingStart="30sp"
          android:fontFamily="@font/arial"
          android:textSize="30sp"
          android:layout_height="wrap_content"
          android:text="@string/there_will_be_a_total_of_5_questions"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:id="@+id/rule_3"
        android:layout_below="@id/rule_2"
        android:orientation="horizontal">
      <ImageView
          android:layout_width="35sp"
          android:layout_height="35sp"
          android:paddingTop="10sp"
          android:src="@drawable/circle"/>
      <TextView
          android:layout_width="wrap_content"
          android:textColor="#963FBF"
          android:paddingStart="30sp"
          android:fontFamily="@font/arial"
          android:paddingEnd="20sp"
          android:textSize="30sp"
          android:layout_height="wrap_content"
          android:text="@string/answer_all_the_questions_correctly_to_win_the_voucher"/>
    </LinearLayout>
  </RelativeLayout>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_below="@id/rules_layout"
      android:paddingTop="30sp"
      android:layout_centerVertical="true"
      android:gravity="center"
      android:layout_centerInParent="true"
      android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textColor="@color/colorPrimary"/>
  </LinearLayout>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="START"
      android:textSize="30sp"
      android:textColor="@android:color/white"
      android:id="@+id/start_button"
      android:layout_marginStart="10sp"
      android:layout_marginBottom="30sp"
      android:layout_marginEnd="10sp"
      android:background="@drawable/button_background"
      android:layout_alignParentBottom="true"/>
  <ProgressBar
      android:layout_width="80sp"
      android:layout_height="80sp"
      android:id="@+id/loading"
      android:visibility="gone"
      android:layout_centerInParent="true"
      android:layout_centerHorizontal="true"/>
</RelativeLayout>
