<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:contentDescription="@string/logo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/logo"

        android:orientation="vertical"
        android:background="@drawable/login_back">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="400sp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="270sp"
                android:layout_marginTop="30sp"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:textColor="#58AEB7"
                android:padding="10sp"
                android:gravity="center"
                android:textColorHint="#58AEB7"
                android:background="#fff"
                android:hint="@string/email" />
            <Button
                android:layout_width="120sp"
                android:background="@drawable/text_background"
                android:layout_marginTop="30sp"
                android:layout_gravity="center"
                android:id="@+id/start_button"
                android:text="@string/start"
                android:textColor="#58AEB7"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>